--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PenCompanyContext": "Server=(localdb)\\mssqllocaldb;Database=PenCompanyContext-2;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  }
 }
